<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        tools:context=".ForgottenPassword">


    <EditText
            android:layout_width="350dp" android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/cardview_light_background"
            android:textColorHighlight="@color/cardview_light_background"
            android:textColorHint="@color/cardview_light_background"
            android:drawableLeft="@drawable/ic_action_person"
            android:textColorLink="@color/cardview_light_background"
            android:shadowColor="@color/cardview_shadow_start_color"
            android:outlineAmbientShadowColor="@color/cardview_shadow_start_color"
            android:outlineSpotShadowColor="@color/cardview_shadow_start_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            android:hint="@string/ingrese_su_correo_electronico"
            android:id="@+id/correo_forgotten"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginTop="45dp"/>

    <Button
            android:id="@+id/send_forgotten"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/aceptar" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/correo_forgotten"/>
    <TextView
            android:text="@string/app_name"
            android:textSize="30sp"
            android:textColor="@color/cardview_light_background"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:drawableTop="@drawable/ic_healing_green_100dp"
            android:id="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="50dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>