<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:background="@drawable/gradient"
        android:layout_height="match_parent" android:id="@+id/scrollView2">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

        <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/cardview_light_background"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="99dp"
                android:layout_marginRight="99dp"
                app:layout_constraintStart_toStartOf="parent"
                android:drawableTop="@drawable/ic_healing_green_100dp"
                android:layout_marginLeft="99dp"
                android:layout_marginStart="99dp"
                android:layout_marginTop="70dp"
                app:layout_constraintTop_toTopOf="parent"
                android:text="Be Safe"
                app:layout_constraintHorizontal_bias="0.503" android:id="@+id/textView4"/>


        <EditText
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:textColor="@color/cardview_light_background"
                android:textColorHighlight="@color/cardview_light_background"
                android:textColorHint="@color/cardview_light_background"
                android:textColorLink="@color/cardview_light_background"
                android:shadowColor="@color/cardview_shadow_start_color"
                android:outlineAmbientShadowColor="@color/cardview_shadow_start_color"
                android:outlineSpotShadowColor="@color/cardview_shadow_start_color"
                android:id="@+id/email"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="99dp"
                android:layout_marginRight="99dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="99dp"
                android:drawableLeft="@drawable/ic_action_person"
                android:layout_marginStart="99dp"
                android:hint="@string/email" app:layout_constraintTop_toBottomOf="@+id/textView4"
                android:layout_marginTop="32dp"/>
        <EditText
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/password"
                android:layout_marginTop="8dp"
                android:textColorHint="@color/cardview_light_background"
                android:textColor="@color/cardview_light_background"
                app:layout_constraintTop_toBottomOf="@+id/email"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="99dp"
                android:drawableLeft="@drawable/ic_action_lock"
                android:layout_marginRight="99dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="99dp"
                android:layout_marginStart="99dp"
                android:visibility="visible"
                android:hint="@string/password"/>
        <Button
                android:text="@string/login"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:id="@+id/login"
                android:backgroundTint="@color/common_google_signin_btn_text_dark"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintCircleRadius="@dimen/cardview_compat_inset_shadow"
                app:layout_constraintCircleAngle="@android:integer/config_mediumAnimTime"
                app:layout_constraintTop_toBottomOf="@+id/forgottenpassword" android:layout_marginTop="32dp"/>
        <Button
                android:text="Register"
                app:layout_constraintCircleRadius="@dimen/cardview_compat_inset_shadow"
                app:layout_constraintCircleAngle="@android:integer/config_mediumAnimTime"
                android:layout_width="240dp"
                android:backgroundTint="@color/common_google_signin_btn_text_dark"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:layout_height="wrap_content"
                android:id="@+id/register" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/login"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"/>
        <TextView
                android:text="@string/u_olvidaste_tu_contrase_a_u"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/forgottenpassword"
                app:layout_constraintTop_toBottomOf="@+id/password"
                android:layout_marginTop="24dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:textSize="18sp"
                android:textColor="@color/common_google_signin_btn_text_dark"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
